--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,11 +8,32 @@ body {
 }
 
 header {
-  background-color: #404040;
+  background-color: #2a83ff;
+  font-size: 30px;
   padding: 1rem;
 }
 header a {
   color: #ffffff;
   font-weight: bold;
   text-decoration: none;
+}
+
+main {
+  padding: 1rem;
+}
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.product {
+  margin: 1rem;
+}
+.product img {
+  width: 100%;
+  max-width: 200px;
+}
+.product-info {
+  padding: 1rem;
 }
