--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,20 +7,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-header {
-  background-color: #2a83ff;
-  font-size: 30px;
-  padding: 1rem;
-}
-header a {
-  color: #ffffff;
-  font-weight: bold;
-  text-decoration: none;
+.site-container {
+  min-height: 100vh;
 }
 
 main {
   padding: 1rem;
+  flex: 1;
 }
+
 .products {
   display: flex;
   flex-wrap: wrap;
