--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,7 +21,7 @@ main {
   color: #000000;
 } */
 
-.products {
+.items {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -31,13 +31,19 @@ main {
   color: #ffc000;
 }
 
-.product {
+.item {
   margin: 1rem;
 }
-.product img {
+
+.item img {
   width: 100%;
   max-width: 200px;
 }
-.product-info {
+
+.item-info {
   padding: 1rem;
+}
+
+.img-large {
+  max-width: 100%;
 }
