--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,10 +57,10 @@ main {
 }
 
 .checkout-steps > div {
-  border-bottom: 0.2rem solid #a0a0a0;
-  color: #a0a0a0;
+  border-bottom: 0.2rem solid #d1e5ff;
+  color: #d1e5ff;
 }
 .checkout-steps > div.active {
-  border-bottom: 0.2rem solid #f08000;
-  color: #f08000;
+  border-bottom: 0.2rem solid #73a1ff;
+  color: #73a1ff;
 }
